syntax = "proto3";

message Empty{}

message Medicamento{
    string codigo = 1;
    string nombre = 2;
    string droga = 3;
    TipoMedicamento tipo = 4;
}

message TipoMedicamento{
    string id = 1;
    string nombre = 2;
}

message Inicial{
    string inicial = 1;
}

message MedicamentoList{
    repeated Medicamento medicamentos = 1;
}

service MedicService{
    rpc GetAll (Empty) returns (MedicamentoList) {}
    rpc InsertType (TipoMedicamento) returns (TipoMedicamento) {}
    rpc RemoveType (TipoMedicamento) returns (MedicamentoList) {}
    rpc Insert (Medicamento) returns (Medicamento) {}
    rpc GetByType (TipoMedicamento) returns (MedicamentoList) {}
    rpc GetByInicial (Inicial) returns (MedicamentoList) {}
}